[project]
name = "tracknetv4-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lion-pytorch>=0.2.3",
    "matplotlib>=3.10.3",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
    "pyqt6>=6.9.1",
    "requests>=2.32.4",
    "scipy>=1.15.3",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]
